fix font atlas loading issues & more precise scissor & image color issues & bloom transformation issues